# mmtk-core

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  jikesrvm_test.fish
.github/workflows/: stress-ci.yml
api/: mmtk.h
examples/: main.c  mmtk.h
src/: lib.rs  memory_manager.rs  mmtk.rs
src/mm/: memory_manager.rs
src/plan/: barriers.rs  collector_context.rs  controller_collector_context.rs  global.rs  mod.rs  parallel_collector_group.rs  phase.rs  plan.rs  plan_constraints.rs  trace.rs  tracing.rs
src/plan/concss/: mod.rs  rtm.rs  ss.rs  ssmutator.rs  sstracelocal.rs
src/plan/gencopy/: global.rs
src/plan/nogc/: nogc.rs  (+5 more)
src/policy/: codespace.rs  copyspace.rs  copyspace2.rs  immortalfreelistspace.rs  immortalspace.rs  largeobjectspace.rs  markregionspace.rs  mod.rs  rawpagespace.rs  space.rs
src/scheduler/: gc_work.rs  scheduler.rs  work.rs  work_bucket.rs  worker.rs
src/util/: address.rs  bitmap.rs  class.rs  conversions.rs  finalizable_processor.rs  forwarding_word.rs  global_pool.rs  handle.rs  header_byte.rs  int_array_freelist.rs  logger.rs  memory.rs  mock_vm.rs  mod.rs  opaque_pointer.rs  options.rs  reference_processor.rs  treadmill.rs
src/vm/: active_plan.rs  collection.rs  memory.rs  mod.rs  object_model.rs  scanning.rs
vmbindings/dummyvm/: Cargo.toml
vmbindings/jikesrvm/: Cargo.toml
vmbindings/jikesrvm/api/: mmtk.h
vmbindings/jikesrvm/src/: active_plan.rs  api.rs  collection.rs  heap_layout_constants.rs  jtoc_call.rs  lib.rs  object_model.rs  reference_glue.rs  scan_boot_image.rs  scanning.rs
vmbindings/openjdk/: Cargo.toml
(+99 files in other folders)
